# cli-ui

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
cli-ui-derive/: Cargo.toml
cli-ui-derive/src/: attrs.rs  codegen_command.rs  codegen_options.rs  lib.rs
examples/: hello_prompt.rs  mini_cargo.rs  mytool.rs  prompt.rs  prompt_validate.rs  subcommands.rs  validation.rs
src/: complete.rs  help.rs  lib.rs  macros.rs  progress.rs  styles.rs  summary.rs  term.rs
src/prompt/: autocomplete.rs  boxed.rs  confirm.rs  cursor.rs  date.rs  engine.rs  error.rs  group.rs  groupmultiselect.rs  limit_options.rs  log.rs  mod.rs  multiline.rs  multiselect.rs  path.rs  progress_bar.rs  render.rs  select.rs  select_key.rs  settings.rs  spinner.rs  stream.rs  task_log.rs  tasks.rs  text.rs  theme.rs  validate.rs
src/prompt/core/: frame.rs  mod.rs  runner.rs  step.rs
tests/: prompt_snapshots.rs
